# r0-zkEmail

./: .gitignore  Cargo.toml  README.md
anchor_zkemail/: .gitignore  Anchor.toml
anchor_zkemail/programs/anchor_zkemail/: Cargo.toml
anchor_zkemail/programs/anchor_zkemail/src/: lib.rs
anchor_zkemail/tests/: anchor_zkemail.ts
host/: Cargo.toml
input-server/: Cargo.toml
input-server/src/: lib.rs
methods/: Cargo.toml
methods/guest/: execution_request.json  manifest.json
methods/guest/src/: main.rs
zk_program/: .gitignore
zk_program/host/: Cargo.toml
zk_program/host/src/: main.rs
zk_program/input-server/src/: lib.rs
zk_program/methods/: .gitignore
zk_program/methods/guest/: Cargo.toml  execution_request.json  manifest.json  no_callback_exec_request.json
zk_program/methods/guest/src/: main.rs
